--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,16 @@
     text-align: center;
     background-color: #2d132c;
     color: white;
+    line-height: 1;
 }
 
+.card-body h5{
+    margin: 1.5rem;
+}
 .card .btn {
     background-color: #ee4540;
     color: #2d132c;
-    margin-bottom: 0;
+    margin-top: 0.5rem;
 }
 
 
