Update styles footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,8 @@ footer{
     background-color: #2d132c;
     color: white;
     position: fixed;
+    padding-top: 10px;
+    padding-bottom: 10px;
     right: 0;
     bottom: 0;
     left: 0;
