Anexo de ejercicios a la seccion rutina

--- a/assets/css/styleRutinas.css
+++ b/assets/css/styleRutinas.css
@@ -1,27 +1,33 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 h2 {
     font-family: 'Monoton', cursive;
 }
 
-nav {
+.header {
     background-color: #2d132c;
-}
-
-nav .container-fluid .collapse .nav-link {
     color: white;
 }
 
-nav .container-fluid .navbar-brand {
-    color: white !important;
-    font-family: 'Monoton', cursive;
+.navbar-collapse {
+    justify-content: flex-end;
 }
 
-nav .container-fluid .collapse {
-    justify-content: flex-end;
+.contLogo {
+    margin: 0px 80px;
+}
+
+.contLogo img{
+    width: 80px;
 }
 
 .rutinas {
     text-align: center;
     padding: 20px;
+    margin-top: 120px;
     margin-bottom: 120px;
 }
 
@@ -59,7 +65,8 @@ nav .container-fluid .collapse {
 .piernas {
     text-align: center;
     padding: 20px;
-    margin-bottom: 130px;
+    margin-top: 120px;
+    margin-bottom: 120px;
 }
 
 .piernas .row .card {
@@ -77,7 +84,8 @@ nav .container-fluid .collapse {
 .brazos {
     text-align: center;
     padding: 20px;
-    margin-bottom: 130px;
+    margin-top: 120px;
+    margin-bottom: 120px;
 }
 
 .brazos .row .card {
@@ -95,7 +103,8 @@ nav .container-fluid .collapse {
 .tronco {
     text-align: center;
     padding: 20px;
-    margin-bottom: 130px;
+    margin-top: 120px;
+    margin-bottom: 120px;
 }
 
 .tronco .row .card {
@@ -108,4 +117,183 @@ nav .container-fluid .collapse {
     width: 250px;
     height: 210px;
     border-radius: 20px;
+}
+
+.cuadriceps {
+    text-align: center;
+    padding: 20px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.cuadriceps .row img {
+    max-width: 310px;
+}
+
+.cuadriceps .row p {
+    text-align: justify;
+}
+
+.gluteos {
+    text-align: center;
+    padding: 20px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.gluteos .row img {
+    max-width: 310px;
+}
+
+.gluteos .row p {
+    text-align: justify;
+}
+
+.gluteos {
+    text-align: center;
+    padding: 20px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.gluteos .row img {
+    max-width: 310px;
+}
+
+.gluteos .row p {
+    text-align: justify;
+}
+
+.pantorrilla {
+    text-align: center;
+    padding: 20px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.pantorrilla .row img {
+    max-width: 310px;
+}
+
+.pantorrilla .row p {
+    text-align: justify;
+}
+
+.hombros {
+    text-align: center;
+    padding: 20px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.hombros .row img {
+    max-width: 310px;
+}
+
+.hombros .row p {
+    text-align: justify;
+}
+
+.biceps {
+    text-align: center;
+    padding: 20px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.biceps .row img {
+    max-width: 310px;
+}
+
+.biceps .row p {
+    text-align: justify;
+}
+
+.triceps {
+    text-align: center;
+    padding: 20px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.triceps .row img {
+    max-width: 310px;
+}
+
+.triceps .row p {
+    text-align: justify;
+}
+
+.antebrazo {
+    text-align: center;
+    padding: 20px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.antebrazo .row img {
+    max-width: 310px;
+}
+
+.antebrazo .row p {
+    text-align: justify;
+}
+
+.pectoral {
+    text-align: center;
+    padding: 20px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.pectoral .row img {
+    max-width: 310px;
+}
+
+.pectoral .row p {
+    text-align: justify;
+}
+
+.espalda {
+    text-align: center;
+    padding: 20px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.espalda .row img {
+    max-width: 310px;
+}
+
+.espalda .row p {
+    text-align: justify;
+}
+
+.abdominales {
+    text-align: center;
+    padding: 20px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.abdominales .row img {
+    max-width: 310px;
+}
+
+.abdominales .row p {
+    text-align: justify;
+}
+
+.quitarwidth {
+    width: unset;
+}
+
+footer {
+    background-color: #2d132c;
+    color: white;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 10px;
+    position: fixed;
 }
