--- a/assets/css/styleRutinas.css
+++ b/assets/css/styleRutinas.css
@@ -24,6 +24,22 @@ h2 {
     width: 80px;
 }
 
+.btn-primary {
+    background-color: #801336;
+    border-color: #801336;
+    margin: 0 10px;
+}
+
+.btn-primary:hover {
+    background-color: #ee4540;
+    border-color: #ee4540;
+}
+
+.btn-primary:active, .btn-primary:focus {
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
+
 .rutinas {
     text-align: center;
     padding: 20px;
