--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,4 +2,17 @@
 
 
 html, body { height: 100%; }
-body { margin: 0; padding: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; padding: 0;}
+
+h1, h2 {
+    font-family: 'Monoton', cursive !important;
+    font-size: 20px;
+}
+h3, p {
+    font-family: 'Roboto', sans-serif !important;
+}
+@media (min-width: 768px) {
+    h2 {
+        font-size: 30px;
+    }
+  }
