--- a/frontend/src/app/home/footer/footer.component.html
+++ b/frontend/src/app/home/footer/footer.component.html
@@ -1,1 +1,1 @@
-<footer class="text-center float-end">&copy; CSS- CodeSoft Solutions <br> Miguel Angel Cerquera Rodriguez - Cristian Andres Gomez - Natalia Ortiz Maldonado - Johan Stiven Quiroga - Edson Daniel Suarez</footer>
+<footer class="text-center footer">&copy; CSS- CodeSoft Solutions <br> Miguel Angel Cerquera Rodriguez - Cristian Andres Gomez - Natalia Ortiz Maldonado - Johan Stiven Quiroga - Edson Daniel Suarez</footer>
