--- a/frontend/src/app/home/footer/footer.component.css
+++ b/frontend/src/app/home/footer/footer.component.css
@@ -1,11 +1,7 @@
 
-
 footer{
     background-color: #2d132c;
     color: white;
-    padding-top: 10px;
-    margin-bottom: 10px;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    padding: 11px;
+    width: 100%;      
 }
