update register module

--- a/frontend/src/app/home/header/header.component.html
+++ b/frontend/src/app/home/header/header.component.html
@@ -29,7 +29,7 @@
                 </button>
             </li>
             <li class="nav-item">
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#registrarse">
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" routerLink="register">
                     Registrate
                 </button>
             </li>
